include z-index:1000 to fix footer and change search

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -658,6 +658,7 @@ div {
     position: fixed;
     bottom: 0;
     width: 100%;
-padding-bottom: 42px;
+    padding-bottom: 42px;
+    z-index: 1000
 
 }
